Fix layer of models